change and remove content of donations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <p>Feito com <a href="http://jekyllrb.com/" target="_blank" rel="noopener">Jekyll</a> e <span class="love">❤</span></p>
+    <p>created with <a href="http://jekyllrb.com/" target="_blank" rel="noopener">Jekyll</a> e <span class="love">❤</span></p>
     <p>
         test
     </p>
