--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,4 @@
 <footer>
-    <p>created with <a href="http://jekyllrb.com/" target="_blank" rel="noopener">Jekyll</a> e <span class="love">❤</span></p>
-    <p>
-        test
-    </p>
+    <p>created using <a href="http://jekyllrb.com/" target="_blank" rel="noopener">Jekyll</a> with <span class="love">❤</span></p>
 </footer>
 <script src="/assets/js/blog.js"></script>
