--- a/_includes/author.html
+++ b/_includes/author.html
@@ -5,7 +5,7 @@
         <h3 class="name" itemprop="author">
             <a href="http://github.com/souhaiebtar">Souhaieb Tarhouni</a>
         </h3>
-        <p class="desc">Desenvolvedor Front End</p>
+        <p class="desc">FullStack/Devops Developer</p>
         <a class="email" href="https://github.com/souhaiebtar">github.com/souhaiebtar</a>
     </div>
 </section>
