--- a/_includes/related.html
+++ b/_includes/related.html
@@ -1,5 +1,5 @@
 <section class="related">
-    <h2 class="related-post_title">Posts relacionados</h2>
+    <h2 class="related-post_title">Related posts</h2>
     {% assign maxRelatedCounter  = 0 %}
 
     <ul class="related-posts_section">
