add post about gitsome install on osx

--- a/src/styl/_theme-colors.styl
+++ b/src/styl/_theme-colors.styl
@@ -4,7 +4,8 @@ themes = {
     post-js: #D6BA32,
     post-svg: #7D669E,
     post-dev: #637a91,
-    post-misc: #7AAB13
+    post-misc: #7AAB13,
+    post-tools: #b31917,
 }
 
 for theme, category-color in themes
